Deployment 1 : navbar display error not showing item solved

--- a/css/style.css
+++ b/css/style.css
@@ -1098,7 +1098,7 @@ svg{
         font-size: 4vw;
     }
 	.navigation li#light {
-        display: block;
+        display: flex;
         visibility: visible;
         list-style: none;
         padding: 3px 5px;
